...
    <string name="activity_title_import_configuration">Import configuration</string>
    <string name="file_path">File path</string>
    <string name="import_failded">Import failed</string>

    <!-- Experimenty -->
    <string name="experiment_undefinded">Undefined</string>
    <string name="experiment_erp" translatable="false">ERP</string>
    <string name="experiment_fvep" translatable="false">f-VEP</string>
    <string name="experiment_tvep" translatable="false">t-VEP</string>
    <string name="experiment_cvep" translatable="false">c-VEP</string>
    <string name="experiment_rea" translatable="false">Reaction experiment</string>
    <string name="experiment_aut">Autostimulation</string>
    <string name="experiment_bio">Biosensor logger</string>
...
    <string name="manager_message_unsuccessful">Action was unsuccessful</string>

    <!-- Activity - media chose -->
    <string name="activity_title_media_chose">Select media…</string>

    <!-- Validační chyby -->
    <string name="error_invalid_name">Bad name format</string>
    <string name="error_name_exists">Name already exists</string>
    <string name="error_invalid_input">Value is out of range</string>

    <!-- Activity - profile factory -->
    <string name="activity_title_new_profile">Nový profil</string>

...
