...
            app:color_accent_1="@{@color/refresh_progress_1}"
            app:color_accent_2="@{@color/refresh_progress_2}"
            app:color_primary="@{@color/refresh_progress_3}"
            app:refresh="@{controller.refreshListener}">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewConfigurations"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/textNoConfigurationFound"
...
